feat: Add i18n support to product edit, document history, and AI guidance components

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -9,6 +9,19 @@
     "verifyProducts": "Verify Products",
     "signIn": "Sign In"
   },
+  "aiGuidance": {
+    "guidanceUnavailable": "Guidance unavailable",
+    "tryAgain": "Try again",
+    "aiDocumentGuidance": "AI Document Guidance",
+    "recommendedDocumentsFor":"Recommended Documents For",
+    "requiredDocuments":"Required Documents",
+    "required":"Required",
+    "examples":"Examples",
+    "optionalDocuments":"Optional Documents",
+    "optional":"Optional",
+    "generalNotes":"General Notes",
+    "complianceRequirements":"Compliance Requirements"
+  },
   "registration": {
     "steps": {
       "documents": {
