feat: Add weight field to product form with database migration and i18n support

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -1759,6 +1759,10 @@
         "label": "Model",
         "placeholder": "Select Model"
       },
+      "weight": {
+        "label": "Product Weight",
+        "placeholder": "Enter product weight"
+      },
       "description": {
         "label": "Description",
         "placeholder": "Enter product description"
