--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -259,6 +259,38 @@
       "error":{
         "title":"Error",
         "description":"An error occurred while loading product information"
+      },
+      "add":{
+        "title":"Add Product",
+        "description":"Assign a product to {distributorName} distributor",
+        "search":{
+          "label":"Search Products",
+          "placeholder":"Search by product name..."
+        },
+        "loading":"Loading products...",
+        "noResults":"No products found matching your search criteria",
+        "noProducts":"No assignable products available",
+        "details":{
+          "title":"Assignment Details",
+          "description":"Specify additional information for the product assignment",
+          "territory":"Territory",
+          "territoryPlaceholder":"e.g., Istanbul, Ankara, Turkey-wide...",
+          "commission":"Commission Rate (%)",
+          "commissionHelp":"Enter a value between 0-100",
+          "notes":"Notes",
+          "notesPlaceholder":"Additional notes about the assignment..."
+        },
+        "cancel":"Cancel",
+        "assign":"Assign Product",
+        "assigning":"Assigning...",
+        "success":{
+          "title":"Product Assigned",
+          "description":"{productName} has been successfully assigned to {distributorName} distributor"
+        },
+        "error":{
+          "title":"Error",
+          "description":"An error occurred while assigning the product to the distributor"
+        }
       }
     }
   },
