Add product weight display to key features section in product details page

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -1060,7 +1060,8 @@
         "category": "Category"
       },
       "keyFeatures": {
-        "title": "Key Features"
+        "title": "Key Features",
+        "weight": "Weight"
       },
       "materials": {
         "title": "Materials",
