feat: Add materials management section to product edit page with table view and CRUD operations

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -1949,6 +1949,24 @@
     "description": "Manage and track all your products",
     "edit":{
       "editProduct":"Edit Product",
+      "materials":"Materials",
+      "totalMaterials":"Total Materials",
+      "material":"Material",
+      "percentage":"Percentage",
+      "recyclable":"Recyclable",
+      "description":"Description",
+      "totalPercentage":"Total Percentage",
+      "actions":"Actions",
+      "addMaterial":"Add Material",
+      "addNewMaterial":"Add New Material",
+      "materialNamePlaceholder":"Enter material name",
+      "materialDescriptionPlaceholder":"Enter material description",
+      "addNewMaterialDescription":"Add new material to the product",
+      "materialName":"Material Name",
+      "add":"Add",
+      "yes":"Yes",
+      "no":"No",
+      "error":"Error",
       "productName":"Product Name",
       "model":"Model",
       "productType":"Product Type",
