--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -2879,6 +2879,24 @@
     "deleteProduct": "Ürünü Sil",
     "edit":{
       "editProduct":"Ürünü Düzenle",
+      "error":"Hata",
+      "materials":"Materyaller",
+      "totalMaterials":"Toplam Materyal",
+      "material":"Materyal",
+      "percentage":"Yüzde",
+      "recyclable":"Geri Dönüştürülebilir",
+      "totalPercentage":"Toplam Yüzde",
+      "materialNamePlaceholder":"Materyal adı giriniz",
+      "materialDescriptionPlaceholder":"Materyal açıklaması giriniz",
+      "yes":"Evet",
+      "no":"Hayır",
+      "addMaterial":"Materyal Ekle",
+      "addNewMaterial":"Yeni Materyal Ekle",
+      "addNewMaterialDescription":"Ürüne yeni materyal ekleyin",
+      "materialName":"Materyal Adı",
+      "add":"Ekle",
+      "actions":"İşlemler",
+      "description":"Açıklama",
       "productName":"Ürün Adı",
       "model":"Model",
       "productType":"Ürün Tipi",
