fix: Convert product weight from kg to grams in sustainability calculations for both product creation and editing

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -1951,6 +1951,8 @@
       "editProduct":"Edit Product",
       "materials":"Materials",
       "totalMaterials":"Total Materials",
+      "noMaterialsAdded":"No materials added yet",
+      "noDocumentsFound":"No documents found",
       "material":"Material",
       "percentage":"Percentage",
       "recyclable":"Recyclable",
