--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -2882,6 +2882,8 @@
       "error":"Hata",
       "materials":"Materyaller",
       "totalMaterials":"Toplam Materyal",
+      "noMaterialsAdded":"Henüz hiç materyal eklenmedi",
+      "noDocumentsFound":"Belge bulunamadı", 
       "material":"Materyal",
       "percentage":"Yüzde",
       "recyclable":"Geri Dönüştürülebilir",
